--- a/Zahlenraten.html
+++ b/Zahlenraten.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hello-World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <style>
+        
+    </style>
+    
 </head>
 <body>
-    <h1>Hello-World</h1>
+    <h1>Hallo zu Zahlenraten</h1>
 </body>
 </html>
