--- a/Zahlenraten_3.html
+++ b/Zahlenraten_3.html
@@ -65,25 +65,26 @@
     
 </head>
 <body onload="geladen() ">
-    <!-- <div class="inhalt"> -->
-        <h1>Willkommen zu Zahlenraten</h1>
-        <h3>Ich habe mir eine Zahl zwischen 1 und 100 ausgedacht, versuch sie zu erraten</h3>
-        <!-- Einen Button für ein neues Spiel -->
-        <button id="neu" onclick="neu()">Neues Spiel</button>
-        <!-- Ein Eingabefeld für den Wert -->
-        <!-- <input id="eingabe" type="text" placeholder="Rate mal..." onkeypress="tastatureingabe(event)"></input> -->
-        <input id="eingabe" type="text" placeholder="Rate mal..."></input>
-        <!-- Einen Button, um den eingegebenen Wert zu prüfen -->
-        <button id="check" onclick="check()">Check</button>
-        <br><br>
-        <h2 id="text">  </h2>
-        <img id="gruen" src="GruenerPfeil.png">
-        <img id="rot" src="RoterPfeil.png">
-        <img id="man" src="man.png" width="500" height="500">
-    <!-- </div> -->
+	<h1>Willkommen zu Zahlenraten</h1>
+	<h3>Ich habe mir eine Zahl zwischen 1 und 100 ausgedacht, versuch sie zu erraten</h3>
+	<!-- Einen Button für ein neues Spiel -->
+	<button id="neu" onclick="neu()">Neues Spiel</button>
+	<!-- Ein Eingabefeld für den Wert -->
+	<!-- <input id="eingabe" type="text" placeholder="Rate mal..." onkeypress="tastatureingabe(event)"></input> -->
+	<input id="eingabe" type="text" placeholder="Rate mal..."></input>
+	<!-- Einen Button, um den eingegebenen Wert zu prüfen -->
+	<button id="check" onclick="check()">Check</button>
+	<!-- Zwei Leerzeilen -->
+	<br><br>
+	<!-- Einen Text für die Ausgabe, ob gewonnen -->
+	<h2 id="text">  </h2>
+	<!-- Das Bild für die Person, die sich freut -->
+	<!-- <img id="man" src="man.png" width="500" height="500"> -->
+	<!-- Die Ton-Datei für den Applaus -->
     <audio id="audiofile">
         <source src="Applaus.mp3" />
     </audio>
+	<!-- Die Video-Datei für den sich freuenden Mann -->
     <video id="videofile" width="500" height="500">
         <source src="manvideo.mp4" />
     </video>
@@ -93,18 +94,12 @@
 
         function geladen() {
             zufallszahl = Math.floor(Math.random() * 100 + 1);
-            document.getElementById("gruen").style.display = "none"; 
-            document.getElementById("rot").style.display = "none";
-            document.getElementById("man").style.display = "none";
             document.getElementById("videofile").style.display = "none";
             console.log(zufallszahl);
         }
 
         function neu() {
             zufallszahl = Math.floor(Math.random() * 100 + 1);
-            document.getElementById("gruen").style.display = "none"; 
-            document.getElementById("rot").style.display = "none";
-            document.getElementById("man").style.display = "none";
             document.getElementById("videofile").style.display = "none";
             document.getElementById("text").innerText = "";
             document.getElementById("eingabe").value = "";
@@ -115,23 +110,16 @@
             var zahl = Number(eingabe);
             if (zahl < zufallszahl) {
                 // alert("Zahl zu klein");
-                // document.getElementById("gruen").style.display = "inline"; 
-                /* document.getElementById("rot").style.display = "none";*/
                 document.getElementById("text").innerText = "Zahl zu klein!";
             }
             else if (zahl > zufallszahl) {
                 // alert("Zahl zu groß");
-                // document.getElementById("gruen").style.display = "none"; 
-                // document.getElementById("rot").style.display = "inline"; 
                 document.getElementById("text").innerText = "Zahl zu groß!";
             }
             else {
                 // alert("Herzlichen Glückwunsch");
-                //document.getElementById("man").style.display = "inline";
                 document.getElementById("text").innerText = "Herzlichen Glückwunsch, Sie haben die Zahl erraten!";
                 document.getElementById("videofile").style.display = "inline";
-                document.getElementById("gruen").style.display = "none";
-                document.getElementById("rot").style.display = "none";
                 document.getElementById("audiofile").play();
                 document.getElementById("videofile").play();
             }
